# rattle

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  NOTICE  README.md  README.rst  pyproject.toml
.github/workflows/: build.yml  docs.yml  lint.yml  publish.yml  tests.yml
docs/: api.md  api.rst  conf.py  contributing.md  guide.md  index.md  index.rst  why.md  why.rst
docs/_ext/: darker_modern_pygments.py  rattle_pygments.py
docs/_static/: compact_viewcode.js  copy_as_markdown.js  custom.css
docs/_templates/: badges.html  meta.html
docs/api/: config.md  formatters.md  frontends.md  index.md  results.md  rules.md
docs/guide/: builtins.md  builtins.rst  commands.md  commands.rst  configuration.md  configuration.rst  integrations.md  integrations.rst  quickstart.md  quickstart.rst
docs/guide/rule-collections/: blank-lines.md  exports.md  fixit-extra.md  fixit.md  policy.md  reliability.md  style.md  typing.md
docs/guide/rule-packs/: blank-lines.md  fixit-extra.md  fixit.md
docs/guide/rules/: avoid-or-in-except.md  blank-line-after-control-block.md  blank-line-after-terminal-control-block.md  blank-line-before-assignment.md  blank-line-before-branch-in-large-suite.md  blank-line-before-branch.md  blank-line-before-unrelated-block.md  block-header-cuddle-relaxed.md  collapse-isinstance-checks.md  compare-primitives-by-equal.md  compare-singleton-primitives-by-is.md  deprecated-a-b-c-import.md  deprecated-unittest-asserts.md  explicit-frozen-dataclass.md  forbidden-call.md  forbidden-import.md  forbidden-name.md  line-count-limit.md  module-all-at-bottom.md  no-annotated-self.md  no-assert-true-for-comparisons.md  no-bare-object-annotations.md  no-exception-message-variables.md  no-inherit-from-object.md  no-named-tuple.md  no-or-in-except.md  no-redundant-arguments-super.md  no-redundant-f-string.md  no-redundant-lambda.md  no-redundant-list-comprehension.md  no-relative-imports.md  no-static-if-condition.md  no-str-exception-translation.md  no-string-type-annotation.md  no-suite-leading-trailing-blank-lines.md  no-underscore-all-exports.md  no-underscore-class.md  no-underscore-import-aliases.md  no-unsafe-tempfile-factories.md  public-method-order.md  (+20 more)
docs/proposals/: fp2.rst
examples/basic/: custom_object.py
examples/teambread/: pyproject.toml
examples/teambread/rules/: hollywood.py
examples/teambread/sourdough/: baker.py
scripts/: check_copyright.py  document_rules.py
src/fixit/: __init__.py  api.py  cli.py  config.py  format.py  ftypes.py  lsp.py  output.py  rule.py  testing.py  util.py
src/fixit/rules/: avoid_or_in_except.py  chained_instance_check.py  cls_in_classmethod.py  compare_primitives_by_equal.py  compare_singleton_primitives_by_is.py  deprecated_abc_import.py  deprecated_unittest_asserts.py  no_assert_true_for_comparison.py  no_inherit_from_object.py  no_namedtuple.py  no_redundant_arguments_super.py  no_redundant_fstring.py  no_redundant_lambda.py  no_redundant_list_comprehension.py  no_static_if_condition.py  no_string_type_annotation.py  replace_union_with_optional.py  rewrite_to_comprehension.py  rewrite_to_literal.py  sorted_attributes_rule.py  use_assert_in.py  use_assert_is_not_none.py  use_async_sleep_in_async_def.py  use_fstring.py  use_types_from_typing.py  variadic_callable_syntax.py
src/fixit/rules/extra/: explicit_frozen_dataclass.py  use_lint_fixme_comment.py
src/fixit/tests/: __init__.py  __main__.py  cli.py  config.py  engine.py  ftypes.py  rule.py  smoke.py  test_lsp.py  test_output.py  test_rules.py
src/rattle/: __init__.py  __main__.py  __version__.py  api.py  ast.py  cache.py  cli.py  config.py  config_models.py  console.py  engine.py  errors.py  explain.py  format.py  ftypes.py  lsp.py  output.py  pyproject.py  rule.py  testing.py  util.py
src/rattle/rules/: __init__.py  avoid_or_in_except.py  chained_instance_check.py  cls_in_classmethod.py  compare_primitives_by_equal.py  compare_singleton_primitives_by_is.py  deprecated_abc_import.py  deprecated_unittest_asserts.py  helpers.py  no_assert_true_for_comparison.py  no_inherit_from_object.py  no_namedtuple.py  no_redundant_arguments_super.py  no_redundant_fstring.py  no_redundant_lambda.py  no_redundant_list_comprehension.py  no_static_if_condition.py  no_string_type_annotation.py  replace_union_with_optional.py  rewrite_to_comprehension.py  rewrite_to_literal.py  sorted_attributes_rule.py  use_assert_in.py  use_assert_is_not_none.py  use_async_sleep_in_async_def.py  use_fstring.py  use_types_from_typing.py  variadic_callable_syntax.py
src/rattle/rules/blank_lines/: __init__.py  base.py  blank_line_after_control_block.py  blank_line_after_terminal_control_block.py  blank_line_before_assignment.py  blank_line_before_branch_in_large_suite.py  block_header_cuddle_relaxed.py  no_suite_leading_trailing_blank_lines.py  utils.py
src/rattle/rules/exports/: __init__.py  module_all_at_bottom.py  no_underscore_all_exports.py
src/rattle/rules/extra/: explicit_frozen_dataclass.py  use_lint_fixme_comment.py
src/rattle/rules/fixit/: __init__.py  explicit_frozen_dataclass.py  no_namedtuple.py  no_static_if_condition.py  sorted_attributes_rule.py  use_lint_fixme_comment.py  use_rattle_ignore_comment.py  use_types_from_typing.py  variadic_callable_syntax.py
src/rattle/rules/fixit_extra/: __init__.py  avoid_or_in_except.py  chained_instance_check.py  cls_in_classmethod.py  compare_primitives_by_equal.py  compare_singleton_primitives_by_is.py  deprecated_abc_import.py  deprecated_unittest_asserts.py  no_assert_true_for_comparison.py  no_inherit_from_object.py  no_redundant_arguments_super.py  (+11 more)
src/rattle/tests/: __init__.py  cli.py  config.py  engine.py  ftypes.py  helpers.py  rule.py  smoke.py  test_api.py  test_ast.py  test_blank_lines.py  test_console.py  test_docs.py  test_fixit_rule_regressions.py  test_lsp.py  test_output.py  test_policy_rules.py  test_pyproject.py  test_rule_regressions.py  test_rules.py  test_source_patterns.py  test_style_typing_exports_rule_audit.py  test_version.py
(+26 files in other folders)
