[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rattle-lint"
readme = "README.md"
authors = [
    {name="zigai"},
]
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

requires-python = ">=3.10"
dependencies = [
    "click >= 8.0, < 9",
    "libcst >= 0.3.18",
    "moreorless >= 0.4.0",
    "packaging >= 21",
    "tomli >= 2.0; python_version < '3.11'",
    "trailrunner >= 1.2",
]

dynamic = ["version"]
description = "A framework for custom Python linters with auto-fixes and hierarchical configuration"

[project.optional-dependencies]
docs = [
    "jinja2 == 3.1.6",
    "myst-parser == 4.0.1",
    "sphinx == 8.0.2",
]
dev = [
    "attribution == 1.8.0",
    "black == 25.11.0",
    "build > 1",
    "codespell>=2.4.2",
    "coverage>=7.13.5",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pyright",
    "tomli",
    "ufmt == 2.9.1",
    "usort == 1.0.8.post1",
    "ruff==0.15.8",
]
lsp = [
    "pygls[ws] ~= 2.0.0",
]
pretty = [
    "rich >= 12.6.0",
]

[project.scripts]
rattle = "rattle.cli:main"

[project.urls]
Home = "https://github.com/zigai/rattle"
Issues = "https://github.com/zigai/rattle/issues"

[tool.attribution]
name = "Rattle"
package = "rattle"
signed_tags = true
version_file = false
ignored_authors = ["dependabot"]

[tool.black]
target-version = ["py310"]

[tool.rattle]
root = true
enable = ["rattle.rules"]
python-version = "3.10"
formatter = "ufmt"

[[tool.rattle.overrides]]
path = "examples"
enable = [".examples.noop"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "/.github",
    "/examples",
    "/legacy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rattle"]

[tool.pyright]
include = ["src/rattle"]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportPrivateImportUsage = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingParameterType = "warning"

[tool.codespell]
skip = ".git,uv.lock"

[tool.pytest.ini_options]
testpaths = ["src/rattle/tests"]
python_files = [
    "test_*.py",
    "config.py",
    "engine.py",
    "ftypes.py",
    "rule.py",
    "smoke.py",
]

[tool.coverage.run]
omit = [
    "/tmp/*",
    "*/tmp/*",
]

[tool.coverage.report]
omit = [
    "/tmp/*",
    "*/tmp/*",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN003",
    "COM",
    "CPY",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D205",
    "D212",
    "DJ",
    "E501",
    "EM101",
    "EM102",
    "ERA",
    "FBT001",
    "FBT002",
    "FIX",
    "N802",
    "N806",
    "PGH004",
    "PIE804",
    "PLC0415",
    "PLR0904",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR1711",
    "PLR2004",
    "PLW0603",
    "PLW2901",
    "PYI041",
    "PYI046",
    "PYI047",
    "PYI049",
    "PYI051",
    "PYI053",
    "PYI054",
    "RET501",
    "RET504",
    "RSE102",
    "RUF012",
    "S101",
    "SIM105",
    "SIM910",
    "SLF001",
    "T20",
    "TC001",
    "TC002",
    "TC003",
    "TC006",
    "TD",
    "TRY003",
]
exclude = ["build"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"docs/conf.py" = ["INP001"]
"examples/*.py" = ["INP001"]
"examples/**/*.py" = ["INP001"]
"scripts/*.py" = ["INP001"]
"src/rattle/tests/*.py" = [
    "A002",
    "A004",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN401",
    "ARG",
    "EM102",
    "FBT001",
    "FLY002",
    "INP001",
    "N806",
    "PLW0108",
    "RUF003",
    "RUF012",
    "S",
    "SIM300",
    "TRY004",
    "UP006",
    "UP007",
    "UP031",
    "UP035",
    "UP045",
]
"src/rattle/tests/**/*.py" = [
    "A002",
    "A004",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN401",
    "ARG",
    "EM102",
    "FBT001",
    "FLY002",
    "INP001",
    "N806",
    "PLW0108",
    "RUF003",
    "RUF012",
    "S",
    "SIM300",
    "TRY004",
    "UP006",
    "UP007",
    "UP031",
    "UP035",
    "UP045",
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.validator",
    "declared_attr",
    "expression",
    "comparator",
]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["id", "input"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "sqlalchemy.orm.DeclarativeBase",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["rattle"]

[tool.ruff.lint.pydocstyle]
convention = "google"
